marked up frontmatter and title

--- a/part1.html
+++ b/part1.html
@@ -1,44 +1,44 @@
-The Project Gutenberg EBook of Metamorphosis, by Franz Kafka
-Translated by David Wyllie.
+<p><i>The Project Gutenberg EBook of Metamorphosis, by Franz Kafka
+Translated by David Wyllie.</i></p>
 
-This eBook is for the use of anyone anywhere at no cost and with
+<p><i>This eBook is for the use of anyone anywhere at no cost and with
 almost no restrictions whatsoever.  You may copy it, give it away or
 re-use it under the terms of the Project Gutenberg License included
-with this eBook or online at www.gutenberg.net
+with this eBook or online at www.gutenberg.net</i></p>
 
 
-Title: Metamorphosis
+<h3>Title: Metamorphosis</h3>
 
-Author: Franz Kafka
+<h3>Author: Franz Kafka</h3>
 
-Translator: David Wyllie
+<h3>Translator: David Wyllie</h3>
 
-Release Date: August 16, 2005 [EBook #5200]
+<p>Release Date: August 16, 2005 [EBook #5200]
 First posted: May 13, 2002
-Last updated: May 20, 2012
+Last updated: May 20, 2012</p>
 
-Language: English
-
-
-*** START OF THIS PROJECT GUTENBERG EBOOK METAMORPHOSIS ***
+<p>Language: English</p>
 
 
-
-
-Copyright (C) 2002 David Wyllie.
+<b>*** START OF THIS PROJECT GUTENBERG EBOOK METAMORPHOSIS ***</b>
 
 
 
 
-
-  Metamorphosis
-  Franz Kafka
-
-Translated by David Wyllie
+<p>Copyright (C) 2002 David Wyllie.</p>
 
 
 
-I
+
+
+  <h1>Metamorphosis</h1>
+  <h2>Franz Kafka</h2>
+
+<h3>Translated by David Wyllie</h3>
+
+
+
+<h2>I</h2>
 
 
 One morning, when Gregor Samsa woke from troubled dreams, he found
