--- a/part1.html
+++ b/part1.html
@@ -1,3 +1,4 @@
+<section>
 <p><i>The Project Gutenberg EBook of Metamorphosis, by Franz Kafka
 Translated by David Wyllie.</i></p>
 
@@ -18,8 +19,8 @@ First posted: May 13, 2002
 Last updated: May 20, 2012</p>
 
 <p>Language: English</p>
-
-
+</section>
+<section>
 <b>*** START OF THIS PROJECT GUTENBERG EBOOK METAMORPHOSIS ***</b>
 
 
@@ -35,7 +36,8 @@ Last updated: May 20, 2012</p>
   <h2>Franz Kafka</h2>
 
 <h3>Translated by David Wyllie</h3>
-
+</section>
+<section>
 
 
 <h2>I</h2>
@@ -661,3 +663,4 @@ ground.  Then his father gave him a hefty shove from behind which
 released him from where he was held and sent him flying, and heavily
 bleeding, deep into his room.  The door was slammed shut with the
 stick, then, finally, all was quiet.</p>
+</section>
